--- a/misc/_posts/2022-01-03-home.md
+++ b/misc/_posts/2022-01-03-home.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Molecular Sociology <br/> <font size="+3">through <em>In situ</em> structure, assembly and function</font> <span> 
+title: Molecular Sociology <br/> through <em>In situ</em> structure, assembly and function
 categories:
  - home
 homepage: true
