--- a/misc/_posts/2022-01-03-home.md
+++ b/misc/_posts/2022-01-03-home.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Molecular Sociology <br/>  <span style="font-size:smaller;">through <em>In situ</em> structure, assembly and function</span>
+title: Molecular Sociology <br/>  <span style="font-size:smaller;">through <em>in situ</em> structure, assembly and function</span>
 categories:
  - home
 homepage: true
