Update to cry_FIB

--- a/papers/_posts/2024-05-01-Cryo_FIB.md
+++ b/papers/_posts/2024-05-01-Cryo_FIB.md
@@ -3,7 +3,7 @@ layout: paper
 title: "Cryo-Focused Ion Beam Milling of Cells"
 year: "2024"
 shortref: "Singh et al. <i>Springer Book</i> 2024"
-nickname: NPC_Basket
+nickname: Cryo_FIB
 journal: "Cryo-Electron Tomography. Focus on Structural Biology, vol 11. Springer"
 volume: 
 issue: 
