Cryo-FIB Updates

--- a/papers/_posts/2024-05-01-Cryo_FIB.md
+++ b/papers/_posts/2024-05-01-Cryo_FIB.md
@@ -18,7 +18,7 @@ pmcid:
 f1000: 
 figshare: 
 doi: https://doi.org/10.1007/978-3-031-51171-4_4
-category: review
+category: paper
 published: true
 peerreview: true
 selected: false
