Cryo-FIB Updates
Cryo-FIB Updates

--- a/papers/_posts/2024-05-01-Cryo_FIB.md
+++ b/papers/_posts/2024-05-01-Cryo_FIB.md
@@ -9,7 +9,7 @@ volume:
 issue: 
 pages: 
 authors: "Digvijay Singh, Elizabeth Villa"
-image: /assets/images/papers/NPC_Basket.png
+image:
 pdf: 
 pdflink: 
 github: 
